--- a/FlashWizFE/app/src/main/res/layout/activity_main.xml
+++ b/FlashWizFE/app/src/main/res/layout/activity_main.xml
@@ -1,69 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
 
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity">
 
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="72dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+         />
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-
-        android:text="@string/app_name"
+        android:text="Welcome"
         android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="50sp"
-
-        android:padding="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="230dp" />
-
-    <Button
-        android:id="@+id/btn_SignUp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Sign up"
-        android:textSize="22sp"
-        android:padding="20dp"
-        android:layout_marginHorizontal="10sp"
-        android:layout_marginTop="10dp"
         android:textColor="@color/white"
-        android:background="#3F3FE3"
-        app:cornerRadius="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+        android:textSize="55sp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        tools:layout_editor_absoluteX="16dp" />
 
     <Button
-        android:id="@+id/btn_SignIn"
+        android:id="@+id/sign_up"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:shadowColor="@color/black"
+        android:layout_marginTop="24dp"
+        android:padding="20dp"
+        android:textSize="22sp"
+
+        android:text="Sign Up"
+        android:onClick="goToSignUp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.842"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/sign_in"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+
+        android:padding="20dp"
         android:text="Sign In"
+        android:onClick="goToSignIn"
         android:textSize="22sp"
-        android:padding="20dp"
-        android:layout_marginHorizontal="10sp"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/white"
-        android:background="#3F3FE3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_SignUp" />
-
-
-
-
-
-
-
+        app:layout_constraintTop_toBottomOf="@+id/sign_up" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
