--- a/FlashWizFE/app/src/main/res/layout/activity_sign_in.xml
+++ b/FlashWizFE/app/src/main/res/layout/activity_sign_in.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/sign_in_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="268dp"
+        android:layout_height="195dp"
 
         android:layout_marginTop="50dp"
         android:background="@drawable/sign_in_img"
@@ -24,12 +24,13 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="Sign In"
-        android:textSize="45dp"
-        android:textAlignment="center"
+        android:textSize="30dp"
+
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
 
         app:layout_constraintTop_toBottomOf="@id/sign_in_img"/>
+
     <EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
@@ -47,8 +48,9 @@
         android:text="Password"
         app:layout_constraintTop_toBottomOf="@id/email" />
 
+
     <Button
-        android:id="@+id/button"
+        android:id="@+id/sign_in_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
