--- a/FlashWiz_FrontEnd/app/src/main/res/values/themes.xml
+++ b/FlashWiz_FrontEnd/app/src/main/res/values/themes.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.AuthModuleYT" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/purple_700</item>
+    <style name="Theme.AuthModuleYT" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!--Primary brand color-->
+        <item name="colorPrimary" type="color">@color/purple_500</item>
+        <item name="colorPrimaryVariant" type="color">@color/purple_700</item>
+        <item name="colorOnPrimary" type="color">@color/white</item>
+        <!--Secondary brand color-->
+        <item name="colorSecondary" type="color">@color/teal_200</item>
+        <item name="colorSecondaryVariant" type="color">@color/teal_700</item>
+        <item name="colorOnSecondary" type="color">@color/black</item>
+        <!--Status brand color-->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
+
 </resources>
