--- a/FlashWiz_FrontEnd/app/src/main/res/values/themes.xml
+++ b/FlashWiz_FrontEnd/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.AuthModuleYT" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.AuthModuleYT" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!--Primary brand color-->
         <item name="colorPrimary" type="color">@color/purple_500</item>
         <item name="colorPrimaryVariant" type="color">@color/purple_700</item>
